susan's changes to tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-183.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-183.htm
@@ -13,13 +13,13 @@
 <ol>
   <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
     menu.</li>
-  <li> Ensure that the <b>Hide empty packages</b> filter is not selected.</li>
+  <li> Unselect the <b>Hide empty packages</b> checkbox.</li>
 </ol>
-To show empty packages: 
+To hide empty packages: 
 <ol>
   <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
     menu.</li>
-  <li> Ensure that the <b>Hide empty packages</b> filter is selected.</li>
+  <li> Select the <b>Hide empty packages</b> checkbox.</li>
 </ol>
 <p><br>
 </p>
