--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -19,9 +19,8 @@
   <li><b>Hide Static Members</b>: when toggled on, this filter will cause all 
     static members to be removed from the view.</li>
   <li><b>Hide Non-Public Members</b>: when toggled on, this filter will cause 
-    all non-publics members to be removed from the view.</li>
+    all non-public members to be removed from the view.</li>
 </ul>
-<p>&nbsp;</p>
 <p>Additionally, Package Explorer can display or hide all elements inside compilation 
   units.</p>
 <p>To show members in Package Explorer:</p>
