--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing full or compressed package names</h1>
 <p>&nbsp;</p>
-<p>Package Explorer and Packages views can show full or compresses package names.</p>
+<p>Package Explorer and Packages views can show full or compressed package names.</p>
 <p>To show full package names:</p>
 <ul>
   <li>Unselect the <b>Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress 
@@ -19,13 +19,13 @@
 <p>To show compressed package names:</p>
 <ul>
   <li>Select the <b>Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress 
-    package name segments</b> checkbox.
-<br>
-    <b>Note:</b> Compression pattern can contain a digit (n), which represents 
+    package name segments</b> checkbox.<br>
+    <br>
+    <b>Note:</b> A compression pattern can contain a digit (n), which represents 
     n characters in the package name segment. <br>
-    Compression pattern is not used if the resulting name is longer than the 
-    original package name. For example, using a pattern '3~.' on a package named 
-    'org.eclipse.jdt' results in 'org.ecl~.jdt'</li>
+    The compression pattern is not used if the resulting name is longer than the 
+    original package name. For example, using a pattern <b>3~.</b> on a package 
+    named <b>org.eclipse.jdt</b> results in <b>org.ecl~.jdt</b></li>
 </ul>
 <p>&nbsp;</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
