--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -12,23 +12,21 @@
 <div class=Section1>
 <h1>
 Showing and hiding libraries</h1>
-To show libraries:
+<p>To show libraries:</p>
 <ol>
 <li>
 Select the <b>Filters</b> command from the Package Explorer's drop-down
 menu.</li>
 
-<li>
-Ensure that the <b>Hide referenced libraries</b> filter is not selected.</li>
+    <li> Unselect the <b>Hide referenced libraries</b> checkbox.</li>
 </ol>
-To show libraries:
-<ol>
+  <p>To hide libraries: </p>
+  <ol>
 <li>
 Select the <b>Filters</b> command from the Package Explorer's drop-down
 menu.</li>
 
-<li>
-Ensure that the <b>Hide referenced libraries</b> filter is selected.</li>
+    <li> Select the <b>Hide referenced libraries</b> checkbox.</li>
 </ol>
 
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159>
