--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -10,14 +10,15 @@
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US">
 <div class=Section1> 
   <h1> Showing single elements or whole Java files</h1>
-  <div class="para">To display a segmented view of the selected Java file, click 
-    the&nbsp;<span 
+  <div class="para">To display the selected Java file in a single element view, 
+    click the&nbsp;<span 
 class=label><b>Show Source of Selected Element Only</b></span> button in the workbench 
-    toolbar (so that it is pressed).</div>
-  <p class="para">To display a whole (non-segmented) view of the selected Java 
-    file, click the&nbsp;<span class=label><b>Show Source of Selected Element 
-    Only</b></span><b></b>button in the workbench toolbar (so that it is de-pressed). 
-  <p><b>Note:</b> this toolbar button is enabled only when a Java editor is open. 
+    toolbar, so that it is depressed.</div>
+  <p class="para">To display the selected Java file in a whole (non-segmented) 
+    view, click the&nbsp;<span class=label><b>Show Source of Selected Element 
+    Only</b></span><b></b> button in the workbench toolbar, so that it is not 
+    depressed. 
+  <p><b>Note:</b> this toolbar button is enabled only when a Java editor is open.</p> 
     <br>
     <img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159> 
   <p><a href="tasks-2.htm">Showing and hiding files</a> 
