--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-185.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-185.htm
@@ -13,13 +13,13 @@
 <ol>
   <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
     menu.</li>
-  <li> Ensure that the <b>Hide Java files</b> filter is not selected.</li>
+  <li>Unselect the <b>Hide Java files</b> checkbox.</li>
 </ol>
-To show Java files: 
+<p>To hide Java files: </p>
 <ol>
   <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
     menu.</li>
-  <li> Ensure that the <b>Hide Java files</b> filter is selected.<br>
+  <li> Select the <b>Hide Java files</b> checkbox.<br>
   </li>
 </ol>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
