--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
@@ -13,13 +13,13 @@
 <ol>
   <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
     menu.</li>
-  <li> Ensure that the <b>Hide non-Java elements</b> filter is not selected.</li>
+  <li> Unselect the <b>Hide non-Java elements</b> checkbox.</li>
 </ol>
-To show non-Java elements: 
+<p>To hide non-Java elements: </p>
 <ol>
   <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
     menu.</li>
-  <li> Ensure that the <b>Hide non-Java elements</b> filter is selected.</li>
+  <li> Select the <b>Hide non-Java elements</b> checkbox.</li>
 </ol>
 <p><br>
 </p>
