--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -5,14 +5,47 @@
    <title> String externalization</title>
 </head>
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US" style="tab-interval:.5in">
-
-<div class=Section1>
-<h1>
-String externalization</h1>
-
-<p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
-</p>
-
-</div></body>
+<div class=Section1> 
+  <h1> String externalization</h1>
+  <p>For an explanation what string externalization and internationalization are 
+    please see:
+</div>
+<ul>
+  <li> 
+    <div class=Section1><a href="http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain">http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain</a></div>
+  </li>
+  <li><a href="http://java.sun.com/docs/books/tutorial/i18n/intro/index.html">http://java.sun.com/docs/books/tutorial/i18n/intro/index.html</a></li>
+</ul>
+<div class=Section1> 
+  <p>The JDT uses comments put in code to mark strings as externalized. 
+  <p>These comments are of form <code>//$NON-NLS-n$</code> where n is the 1-based 
+    index of the string in a line of code.
+  <p>
+  <p>The JDT provides the following support for internationalization and string 
+    externalization: 
+</div>
+<ul>
+  <li> 
+    <div class=Section1>Compiler option that lets you mark not-externalized strings 
+      as compile-time warnings or errors.</div>
+    <ul>
+      <li>See the <b>Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors 
+        and Warnings &gt; Not-externalized strings </b>preference</li>
+    </ul>
+  </li>
+  <li>Support to find compilation units that contain not-externalized strings.</li>
+  <li>A wizard that lets you externalize strings.</li>
+  <li>Suport for finding unused and incorrectly used keys for strings externalized 
+    to property files.</li>
+</ul>
+<div class=Section1> 
+  <p><img src="../images/ngrelt.gif" alt="Related tasks" border=0 id="_x0000_i1026" height=27 width=159> 
+  <p><a href="../tasks/tasks-188.htm">Finding trings to externalize</a>
+  <p><a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files </a> 
+  <p><a href="../tasks/tasks-180.htm">Using the Externalize Strings wizard</a> 
+  <p><br>
+  <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
+  </p>
+</div>
+</body>
 </html>
