--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
@@ -47,7 +47,7 @@ for the Java project and running the class by name. The following code snippet s
 Another way to launch a Java program is to create a <b>Java application</b> launch configuration,
 and launch it. The following snippet shows how the class <b>MyClass</b> inside <b> myJavaProject</b>
 can be launched using a simple launch configuration. By default, the resulting running application
-will use the JRE and classpath associated with <b>myJavaProject</b>.
+uses the JRE and classpath associated with <b>myJavaProject</b>.
 </p>
 <font color='#4444CC'><pre>
    ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();
