Updated doc for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -86,7 +86,7 @@ Green</P>
 <p CLASS="Head">
 Click the <b> <SPAN CLASS="Label">
 Change</SPAN></b>
- button to modify the text for the console.</li>
+ button to modify the text font for the console.</li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p>
