Updated doc for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -29,8 +29,12 @@ Relaunch</b> from the process's pop-up menu.</P>
   </li>
 </ul>
 <P CLASS="Para">
-Or, to relaunch the most recent launch:</P>
+To relaunch the most recent launch, do one of the following:</P>
 <ul>
+  <li>
+<P CLASS="Para">
+Click the <b>Run</b> or <b>Debug</b> buttons.</P>
+  </li>
   <li>
 <P CLASS="Para">
 From the menu bar <b>Run</b> &gt; <b>Run Last Launched (Ctrl+F11)</b>, or 
