fixed broken links

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
@@ -33,7 +33,7 @@ refactoring can be completed.
 <br><a href="tasks-84.htm">Previewing refactoring changes</a>
 <br><a href="tasks-101.htm">Redoing a refactoring operation</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-116.htm">Refactoring actions</a>
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <br>&nbsp;
