--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
@@ -46,7 +46,7 @@ debugging</a><br>
 <a href="../tasks/tasks-129.htm">Setting execution 
 arguments</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Package Explorer</a></p>
+<p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
