--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -68,7 +68,7 @@ the execution of a program</a><br>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p>
 <a href="../reference/ref-51.htm">Debug view</a><br>
-<a href="../reference/ref-90.htm">Package Explorer</a><br>
+<a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
 
 <P><br>
 
