--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
@@ -25,7 +25,7 @@
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-96.htm">Renaming a method</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-116.htm">Refactoring actions</a>
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <p>
 <img src = ../ngibmcpy.gif> 
 </BODY>
