--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
@@ -39,7 +39,7 @@ Replacing a local variable with a query</H1>
 <p><a href="tasks-87.htm">Extracting a method</a> 
 <p><a href="tasks-161.htm">Inlining a local variable</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159> 
-<p><a href="../reference/ref-116.htm">Refactoring actions</a> 
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a> 
 <p><br>
   &nbsp; <img src = ../ngibmcpy.gif> 
 </BODY>
