--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
@@ -62,7 +62,7 @@ compilation unit</a><br>
 <a href="../tasks/tasks-94.htm">Renaming a class, 
 field, or interface</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Package Explorer</a></p>
+<p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
