--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-58.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-58.htm
@@ -22,7 +22,7 @@ import statements</a><br>
 <a href="../tasks/tasks-61.htm">Setting the order of 
 import statements</a>&nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-116.htm">Refactoring 
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring 
 actions</a></p>
 <P><br>
 
