--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -41,7 +41,7 @@
     <br>
     <a href="tasks-61.htm">Setting the order of import statements</a> 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
-  <p><a href="../reference/ref-116.htm">Refactoring actions</a> <br>
+  <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a> <br>
     &nbsp; 
   <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
 </div>
