--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
@@ -52,7 +52,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     <a href="tasks-101.htm">Redoing a refactoring operation</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-116.htm">Refactoring actions</a><br>
+  <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
     <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
     <a href="../reference/ref-23.htm">Refactoring preferences</a></p>
   <p>&nbsp;<br>
