--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-86.htm
@@ -54,8 +54,8 @@ packages, and files</a><br>
 <a href="../tasks/tasks-85.htm">Copying and moving 
 Java elements</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p dir="ltr"><a href="../reference/ref-90.htm">Package Explorer</a><br>
-<a href="../reference/ref-116.htm">Refactoring 
+<p dir="ltr"><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
+<a href="../reference/ref-menu-refactor.htm">Refactoring 
 actions</a></p>
 <P><br>
 
