--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
@@ -43,7 +43,7 @@ Method</span></b>.</li>
 <p><a href="../reference/ref-154.htm">Extract method errors</a>
 <br><a href="../reference/rinmeth.htm">Inherited methods</a>
 <br><a href="../reference/rprobpg.htm">Method extraction troubleshooting</a>
-<br><a href="../reference/ref-116.htm">Refactoring actions</a>
+<br><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
