--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -45,7 +45,7 @@ To rename a single parameter, it is often easier to:
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-157.htm">Reordering method parameters</a> 
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-116.htm">Refactoring actions</a>
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
