--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -50,7 +50,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     <a href="tasks-94.htm">Renaming a class, field, or interface</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
+  <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
   <p><br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
