--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
@@ -38,7 +38,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     Explorer view</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-116.htm">Refactoring actions</a></p>
+  <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a></p>
   <p><br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
