--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-71.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-71.htm
@@ -45,7 +45,7 @@
     <br>
     <a href="tasks-70.htm">Viewing marker help</a> 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1028" height=27 width=159> 
-  <p><a href="../reference/ref-90.htm">Package Explorer</a> <br>
+  <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a> <br>
     &nbsp; 
   <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1029" height=12 width=195> 
 </div>
