--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-84.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-84.htm
@@ -45,7 +45,7 @@ refactoring operation</a><br>
 <a href="../tasks/tasks-101.htm">Redoing a 
 refactoring operation</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-116.htm">Refactoring 
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring 
 actions</a><br>
 <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
 <a href="../reference/ref-23.htm">Refactoring preferences</a></p>
