--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -13,7 +13,7 @@
 Setting the Java build path</H2>
 <P>
 
-This section describes how to set the Java build path, i.e. the classpath used for building <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html">Java project</a></b>.
+This section describes how to set the Java build path, i.e. the classpath used for building a <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html">Java project</a></b>.
 A classpath is an array of <b><a href="../reference/api/org/eclipse/jdt/core/IClasspathEntry.html">classpath entries</a></b> accounting for available types either in source 
 or binary form, which are used in order to find available types. The ordering of these entries defines the precedence of the available types.
 
@@ -23,13 +23,13 @@ directly derived from the Java build path (each entry maps to one or more packag
 getPackageFragmentRoots</a></b>).
 
 <P>
-This section does not cover the Java runtime path which can be defined separately, see related section on how to <b><a href="../guide/jdt_api_run">run Java programs</a></b>.
+This section does not cover the Java runtime path which can be defined separately, see the related section on how to <b><a href="../guide/jdt_api_run">run Java programs</a></b>.
 
 <h3>
 Changing the build path</h3>
 <P>
 You can programmatically change a project's build path using <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IProgressMonitor)>setRawClasspath">
-setRawClasspath</a></b> on the corresponding project Java element, e.g.
+setRawClasspath</a></b> on the corresponding project's Java element, for example:
 
 	<font color='#4444CC'><pre>
 	IProject project = ... // get some project resource
@@ -38,12 +38,11 @@ setRawClasspath</a></b> on the corresponding project Java element, e.g.
 	javaProject.setRawClasspath(newClasspath, someProgressMonitor);
 	</pre></font>
 	
-<P>
-Note that also exists a variant of <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setRawClasspath</a></b>
-which allows to define both at the same time, the Java build path and the project <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#getOutputLocation()">output location</a></b>.
+Note that there also exists a variant of <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setRawClasspath</a></b>
+which lets the Java build path and the project <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#getOutputLocation()">output location</a></b> be defined at the same time.
 
 <P>
-The Java build path is persisted into a file named '.classpath' under the project location. The purpose of this file is to provide a mean for sharing Java build path settings with others through 
+The Java build path is persisted into a file named '.classpath' under the project location. The purpose of this file is to provide a way to share Java build path settings with others through 
 some source code repository. In particular, this file should not be manually edited, since it may get corrupted.
  
 <H3>
@@ -55,25 +54,20 @@ any of the following:
 <ul>
 <li><b>a source folder</b> - 
 a folder containing source compilation units organized under their corresponding package directory structure. Source folders are used to better structure 
-sources in large projects, and may only be referenced within the containing project. The corresponding factory method is 
+source files in large projects, and may only be referenced within the containing project. The corresponding factory method is 
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#newSourceEntry(org.eclipse.core.runtime.IPath)">newSourceEntry</a></b>.
-<P>
 Inside a given source folder, each compilation unit is expected to be nested in the appropriate folder structure according to its package statement, e.g. unit 'X.java' in package 'p1' 
 must be located inside subfolder 'p1' of a source folder.
-<P>
 It is possible to use multiple source folders, as long as they don't overlap. When a build action occurs, all generated classfiles are generated into the project output location (also see 
-b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setOutputLocation(org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setOutputLocation</a></b>).
+<b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setOutputLocation(org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setOutputLocation</a></b>).
 
-<P>
-<br>
+<P><br>
 <P>
 e.g. entry denoting the source folder 'src' of project 'MyProject':
-	<font color='#4444CC'><pre>
-  IClassPathEntry srcEntry = JavaCore.newSourceEntry(new Path( "/MyProject/src");
-	</pre></font>
+	<font color='#4444CC'><pre>   IClassPathEntry srcEntry = JavaCore.newSourceEntry(new Path("/MyProject/src");</pre></font>
 </li>
 <li><b>a binary library</b> - either a class file folder (contained inside the workspace) or a class file archive file (contained either inside or outside the workspace).
-Archive libraries can be attached source archives, which will then be automatically extracted when asking a class file element  for
+Archive libraries can be attached source archives, which are then extracted when asking a class file element  for
 <b><a href="../reference/api/org/eclipse/jdt/core/ISourceReference.html#getSource()">getSource</a></b>.
 The factory method for libraries is 
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#newLibraryEntry(org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IPath, boolean)">newLibraryEntry</a></b>.
@@ -83,7 +77,7 @@ The factory method for libraries is
 e.g. entry denoting the class file folder 'lib' of  'MyProject':
 	<font color='#4444CC'><pre>
   IClassPathEntry libEntry = JavaCore.newLibraryEntry(
-    new Path( "/MyProject/lib"), 
+    new Path("/MyProject/lib"), 
     null, //no source
     null, //no source
     false); //not exported
@@ -91,37 +85,35 @@ e.g. entry denoting the class file folder 'lib' of  'MyProject':
 e.g. entry denoting an external JAR with source attachment:
 	<font color='#4444CC'><pre>
   IClassPathEntry libEntry = JavaCore.newLibraryEntry(
-    new Path( "d:/lib/foo.jar"), // library location
+    new Path("d:/lib/foo.jar"), // library location
     new Path("d:/lib/foo_src.zip"), //source archive location
     new Path("src"), //source archive root path
     true); //exported
 	</pre></font>
 </li>
-<li><b>a prerequisite project</b> - another Java project as a whole. A given project always contribute its source folders to dependent projects (i.e. projects which are prerequisiting the given project on their
-classpath). It can also optionally contribute any of its classpath entries which are tagged as exported (see factory methods supporting extra boolean argument 'isExported').
-This means that in addition to contributing its source to its dependents, a project will also export all classpath entries tagged as such, and thus better hide its internals to dependents. 
-For instance, a given project may choose to switch from using a source folder to instead exporting a library without requiring dependent projects to change their classpath in consequence.
-The factory method for project prerequisite is 
+<li><b>a prerequisite project</b> - another Java project as a whole. A given project always contributes its source folders to dependent projects.
+It can also optionally contribute any of its classpath entries which are tagged as exported (see factory methods supporting extra boolean argument 'isExported').
+This means that in addition to contributing its source to its dependents, a project will also export all classpath entries tagged as such, and thus better hide its internals to dependent projects. 
+For instance, a given project may choose to switch from using a source folder to instead exporting a library without requiring its dependent projects to change their classpath.
+The factory method for a project prerequisite is 
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#newProjectEntry(org.eclipse.core.runtime.IPath, boolean)">newProjectEntry</a></b>.
 <P>
 <br>
 <P>
 e.g. entry denoting a prereq project 'MyFramework', implicitly exported to further dependent projects:
 	<font color='#4444CC'><pre>
-  IClassPathEntry prjEntry = JavaCore.newProjectEntry(new Path( "/MyFramework"), true); //exported
+  IClassPathEntry prjEntry = JavaCore.newProjectEntry(new Path("/MyFramework"), true); //exported
 	</pre></font>
 </li>
-<li><b>an indirect reference to a project or library, using some classpath variable</b> - can target either projects or libraries, which location is dynamically resolved relatively to a
+<li><b>an indirect reference to a project or library, using some classpath variable</b> - can target either projects or libraries, whose location is dynamically resolved relative to a
 classpath variable, which is specified as the first segment of the entry path. The rest of the entry path is then appended to the resolved variable path.
-The factory method for project prerequisite is 
+The factory method for a classpath variable is 
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#newVariableEntry(org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IPath)">newVariableEntry</a></b>.
-<P>
-Classpath variables are global to the workspace, and can be rmanipulated through JavaCore methods 
+Classpath variables are global to the workspace, and can be manipulated through JavaCore methods 
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getClasspathVariable(java.lang.String)">getClasspathVariable</a></b> and
-<b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setClasspathVariable(java.lang.String, org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)"> setClasspathVariable </a></b>.
-<P>
+<b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setClasspathVariable(java.lang.String, org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setClasspathVariable</a></b>.
 It is possible to register an automatic <b><a href="../reference/api/org/eclipse/jdt/core/ClasspathVariableInitializer.html">classpath variable initializer</a></b>
-which will be lazily invoked through the extension point "org.eclipse.jdt.core.classpathVariableInitializer" when the variable need to be bound.
+which is lazily invoked through the extension point "org.eclipse.jdt.core.classpathVariableInitializer" when the variable needs to be bound.
 <P>
 <br>
 <P>
@@ -138,15 +130,12 @@ e.g. entry denoting a library indirectly referred to using a variable 'HOME', wh
 <li><b>entry denoting a classpath container</b> - an indirect reference to a structured set of project or libraries. Like classpath variables, 
 <b><a href="../reference/api/org/eclipse/jdt/core/IClasspathContainer.html">classpath containers</a></b>
 are dynamically resolved, but they can also have distinct values per project and provide additional information about what they represent (name, kind, description, ...).
-<P>
 Classpath containers are intended to be used to describe more complex project and library aggregates.
-<P>
 Classpath containers have project specific values, and can be rmanipulated through JavaCore methods 
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getClasspathContainer(org.eclipse.core.runtime.IPath, org.eclipse.jdt.core.IJavaProject)">getClasspathContainer</a></b> and
-<b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setClasspathVariable(java.lang.String, org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)"> setClasspathVariable </a></b>.
-<P>
+<b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setClasspathVariable(java.lang.String, org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setClasspathVariable</a></b>.
 It is possible to register an automatic <b><a href="../reference/api/org/eclipse/jdt/core/ClasspathContainerInitializer.html">classpath container initializer</a></b>
-which will be lazily invoked through the extension point "org.eclipse.jdt.core.classpathContainerInitializer" when the container need to be bound.
+which is lazily invoked through the extension point "org.eclipse.jdt.core.classpathContainerInitializer" when the container needs to be bound.
 
 <P>
 <br>
@@ -183,7 +172,7 @@ e.g. entry denoting a system class library container:
 <H2>
 Classpath resolution</H2>
 
-Due to the presence of dynamically bound entries (classpath variables and containers), JDT Core distinguishes the notion of raw and resolved classpath. The raw classpath is the one originally
+Due to the presence of dynamically bound entries (classpath variables and containers), JDT Core distinguishes the notion of a raw and resolved classpath. The raw classpath is the one originally
 set on the Java project using 
 <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IProgressMonitor)">setRawClasspath</a></b>,
 and can be further queried by asking the project for
@@ -192,8 +181,8 @@ and can be further queried by asking the project for
 <P>
 It is also possible to query for the resolved classpath of a project, using 
 <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#getResolvedClasspath(boolean)">getResolvedClasspath</a></b>. 
-This operation will automatically trigger initialization of involved variable(s) and/or container(s)  if necessary. Note that many Java Model operations
-will implicitly cause the Java build path to be resolved, e.g. computing a project package fragment roots requires the build path to be resolved.
+This operation triggers initialization of involved variable(s) and/or container(s) if necessary. Note that many Java Model operations
+implicitly cause the Java build path to be resolved, e.g. computing a project package fragment roots requires the build path to be resolved.
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
