Updated classpath variables / build classpath doc

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -1,29 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Building a Java program</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Building a Java program</H1>
-<P CLASS="Para">
-A build command compiles workbench resources. A build command can be triggered in different ways:</P>
-<UL CLASS="UnorderedList">
-  <LI CLASS="Item"> Building automatically: If auto build is turned on (<strong>Window 
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Building a Java program</title></head>
+<body bgcolor="#ffffff">
+<h1 class="Head">
+Building a Java program</h1>
+<p class="Para">
+A build command compiles workbench resources. A build command can be triggered in different ways:</p>
+<ul class="UnorderedList">
+  <li class="Item"> Building automatically: If auto build is turned on (<strong>Window 
     &gt; Preferences &gt; Perform build automatically on resource modification</strong>), 
     then an incremental build occurs every time you save a modified workbench 
-    resource.</LI>
-  <LI CLASS="Item"> Building manually: You can perform a manual build using a, 
+    resource.</li>
+  <li class="Item"> Building manually: You can perform a manual build using a, 
     keyboard shortcut, a project's pop-up menu or the <b>Project</b> menu in the 
-    menu bar.</LI>
-</UL>
+    menu bar.</li>
+</ul>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p>
-<a href="../concepts/cbuildcp.htm">Build class path</a><br>
+<a href="../concepts/cbuildcp.htm">Build classpath</a><br>
 <a href="../concepts/concepts-4.htm">Java builder</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p>
@@ -38,15 +34,14 @@ automatically</a><br>
 a project's build path</a><br>
 <a href="../tasks/tasks-110.htm">Working with build 
 paths</a></p>
-<P>&nbsp;<br>
+<p>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<img src="../images/ngibmcpy.gif" width="195" height="12">
 
-</P>
-
-
+</p>
 
 
 
-</BODY>
-</HTML>
+
+
+</body></html>
