--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -1,41 +1,37 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding a JAR file to the build path</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Adding a JAR file to the build path</H1>
-<P CLASS="Para">
-You can add a JAR file stored either in the workbench or anywhere in your file system to the build class path. </P>
-<P CLASS="Para">
-To add a JAR to your build class path follow these steps:</P>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Adding a JAR file to the build path</title></head>
+<body bgcolor="#ffffff">
+<h1 class="Head">
+Adding a JAR file to the build path</h1>
+<p class="Para">
+You can add a JAR file stored either in the workbench or anywhere in your file system to the build class path. </p>
+<p class="Para">
+To add a JAR to your build class path follow these steps:</p>
 <ol>
   <li> 
-    <P CLASS="Para"> Select the project, and from its pop-up menu, select <b>Properties</b>.</P>
+    <p class="Para"> Select the project, and from its pop-up menu, select <b>Properties</b>.</p>
   </li>
   <li> 
-    <P CLASS="Para"> In the Properties dialog, select the <b>Java Build Path</b> 
-      page. </P>
+    <p class="Para"> In the Properties dialog, select the <b>Java Build Path</b> 
+      page. </p>
   </li>
   <li> 
-    <P CLASS="Para"> Click the <b>Libraries</b> tab.</P>
+    <p class="Para"> Click the <b>Libraries</b> tab.</p>
   </li>
   <li> 
-    <P CLASS="Para"> Click the <b> <SPAN CLASS="Label"> Add JARs</SPAN></b> button 
-      for adding a workbench internal JAR file, or click the <b> <SPAN CLASS="Label"> 
-      Add External JARs</SPAN></b> button for adding a JAR file stored on the 
-      file system.</P>
+    <p class="Para"> Click the <b> <span class="Label"> Add JARs</span></b> button 
+      for adding a workbench internal JAR file, or click the <b> <span class="Label"> 
+      Add External JARs</span></b> button for adding a JAR file stored on the 
+      file system.</p>
   </li>
   <li>In the dialog that shows up, select the JAR that you want to add.</li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-4.htm">Java builder</a><br>
-<a href="../concepts/cbuildcp.htm">Build class path</a></p>
+<a href="../concepts/cbuildcp.htm">Build classpath</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p>
 <a href="tasks-112.htm">Adding a library 
@@ -53,11 +49,10 @@ a project's build path</a><br>
 paths</a><br>
 &nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
+<img src="../images/ngibmcpy.gif" width="195" height="12"> </p>
 
 
 
 
 
-</BODY>
-</HTML>
+</body></html>
