--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -1,20 +1,20 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<head>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-	<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-   <title> Java development tools (JDT) </title>
-</head>
-<body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US" style="tab-interval:.5in">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java development tools (JDT)</title></head>
+<body bgcolor="#ffffff" link="#0000ff" vlink="#0000ff" lang="EN-US" style="tab-interval:.5in">
 
-<div class=Section1>
+<div class="Section1">
 <h1>
 Java development tools (JDT)</h1>
 
 <div class="head">The Java development tools (JDT) are a set of extensions
 to the workbench that enable Java development.</div>
 
-<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
-<br><a href="../concepts/cclsspthv.htm">Class path variables</a>
+<p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" id="_x0000_i1025" height="27" width="159">
+<br><a href="cbuildcp.htm">Build classpath</a>
+<a href="../concepts/cclsspthv.htm"><br>
+Classpath variables</a>
+
 <br><a href="../concepts/concepts-10.htm">Debugger</a>
 <br><a href="../concepts/concepts-4.htm">Java builder</a>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
@@ -24,23 +24,22 @@ to the workbench that enable Java development.</div>
 <br><a href="../concepts/concepts-8.htm">Java search</a>
 <br><a href="../concepts/concepts-9.htm">Refactoring support</a>
 <br><a href="../concepts/concepts-11.htm">Scrapbook</a>
-<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<p><a href="../tasks/tasks-31.htm">Adding source code as individual files</a>
+</p><p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" id="_x0000_i1026" height="27" width="159">
+</p><p><a href="../tasks/tasks-31.htm">Adding source code as individual files</a>
 <br><a href="../tasks/tasks-11.htm">Creating Java elements</a>
 <br><a href="../tasks/tasks-66.htm">Formatting Java code</a>
 <br><a href="../tasks/tasks-64.htm">Restoring a deleted workbench element</a>
 <br><a href="../tasks/tasks-2.htm">Showing and hiding files</a>
 <br><a href="../tasks/tasks-119.htm">Working with JREs</a>
-<p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
-<p><a href="../reference/ref-2.htm">JDT actions</a>
+</p><p><img src="../images/ngrelr.gif" alt="Related reference" border="0" id="_x0000_i1027" height="27" width="159">
+</p><p><a href="../reference/ref-2.htm">JDT actions</a>
 <br><a href="../reference/ref-152.htm">Frequently asked questions on JDT</a>
 <br><a href="../reference/ref-155.htm">JDT glossary</a>
 <br>&nbsp;
-</div>
+</p></div>
 
 <p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p><p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
 
-</body>
-</html>
+</body></html>
