*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -194,7 +194,7 @@ The DOM/AST node contains only a pair of positions (the starting position and th
 sufficient. In order to retrieve intermediate positions, the <b><a href="../reference/api/org/eclipse/jdt/core/compiler/IScanner.html">IScanner</a></b> API should be used. For example,
 we have an <b><a href="../reference/api/org/eclipse/jdt/core/dom/InstanceofExpression.html">InstanceofExpression</a></b> for which we want to know the 
 positions of the <i>instanceof</i> operator.
-We could write the following method to archieve this:
+We could write the following method to achieve this:
 <font color='#4444CC'><pre>
 	private int[] getOperatorPosition(Expression expression, char[] source) {
 		if (expression instanceof InstanceofExpression) {
