Added references to 'Restore from local history' Added two items to 'Whats new in 2.0'

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-17a.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-17a.htm
@@ -14,7 +14,7 @@
 Local history</H1>
 <p>A local edit history of a file is maintained when you create or modify a
 file. Each time you edit and save the file,&nbsp; a copy is saved so that you can replace the current
-file with a previous edit.&nbsp; You can also
+file with a previous edit or even restore a deleted file.&nbsp; You can also
 compare the contents of all the local edits.&nbsp; Each edit in the local
 history is uniquely represented by the date and time the file was
 saved.&nbsp;&nbsp;</p>
@@ -23,10 +23,12 @@ saved.&nbsp;&nbsp;</p>
 <a href="concepts-27.htm">Versions</a></p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-87.htm">Replacing a resource with local history</a><a href="../tasks/tasks-70.htm"><br>
-Comparing resources with local history</a><a href="../tasks/tasks-88.htm"><br>
-Setting local history preferences<br>
-</a><a href="../tasks/tasks-100.htm">Creating a version of a project</a></p>
+<a href="../tasks/tasks-70.htm">Comparing resources with local history</a><br>
+<a href="../tasks/tasks-87.htm">Replacing a resource with local history</a><br>
+<a href="../tasks/tasks-87b.htm">Restoring deleted resources from local history</a><br>
+<a href="../tasks/tasks-88.htm">Setting local history preferences<br></a><br>
+<a href="../tasks/tasks-100.htm">Creating a version of a project</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
