--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-70.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-70.htm
@@ -32,6 +32,7 @@
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-87.htm">Replacing a resource with local history</a><br>
+<a href="tasks-87b.htm">Restoring deleted resources from local history</a><br>
 <a href="tasks-88.htm">Setting local history preferences</a><br>
 <a href="tasks-68.htm">Comparing resources</a>
 </p>
