--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -133,6 +133,18 @@ Eclipse Workbench. The following lists some of them.
   <dd>Preferences may now be exchanged between workspaces using the import/export
   	preference feature.</dd>
 </P>
+<P CLASS="Para">
+  <dt>Local history</dt>
+  <dd>It is now possible to restore deleted resources from the
+  <a href="../concepts/concepts-17a.htm">local history</a> using the new
+  <b>Restore From Local History...</b> command in the navigator view context menu.</dd>
+</P>
+<P CLASS="Para">
+  <dt>Working with patch files</dt>
+  <dd>You can now <a href="../tasks/tasks-68c.htm">create</a> patch files for a CVS project
+  and <a href="../tasks/tasks-68c.htm">apply</a> patch files to workspace resources.</dd>
+</P>
+
 </dl>
 <p>&nbsp;</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
