--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -45,16 +45,8 @@
  <p><img src="../../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="navigation.htm"><br>
  Navigating the user interface using the keyboard</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
- <a href="keyboardshortcuts.htm">Keyboard shortcuts</a></p>
-
- 
- <p><a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
-
- 
- <p>&nbsp;</p>
-
- 
- <p>&nbsp;</p>
+ <a href="keyboardshortcuts.htm">Keyboard shortcuts</a><br>
+<a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
 
  
 <p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a></p>
