fixed broken links

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
@@ -24,7 +24,7 @@ Redoing a refactoring operation</h1>
 <br><a href="tasks-100.htm">Undoing a refactoring operation</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
-<br><a href="../reference/ref-102.htm">Outline view for Java</a>
+<br><a href="../reference/ref-view-outline.htm">Outline view for Java</a>
 <br><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
