--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
@@ -57,7 +57,7 @@ Remove</SPAN></b> from its pop-up menu in the Breakpoints view</LI>
 &nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-35.htm">Breakpoints view</a><br>
-<a href="../reference/ref-102.htm">Outline view for Java</a></p>
+<a href="../reference/ref-view-outline.htm">Outline view for Java</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
