--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -20,7 +20,7 @@ for a selected element</a><br>
 <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
 <a href="../tasks/tasks-65.htm">Using content/code assist</a>&nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-102.htm">Outline view for Java</a><br>
+<p><a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
 <a href="../reference/ref-5.htm">Java editor actions</a><br>
 <a href="../reference/ref-26.htm">Syntax highlighting</a></p>
 <P><br>
