--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -33,7 +33,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     &nbsp;</p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-102.htm">Outline view for Java</a></p>
+  <p><a href="../reference/ref-view-outline.htm">Outline view for Java</a></p>
   <p><br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
