--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -46,7 +46,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-62.htm">Using the local history</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-102.htm">Outline view for Java</a><br>
+  <p><a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
     &nbsp;</p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
