fixed broken links

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -35,7 +35,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     <a href="tasks-96.htm">Renaming a method</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"><br>
-    <a href="../reference/rinmeth.htm">Inherited methods</a></p>
+    <a href="../reference/ref-dialog-override-method.htm">Override methods</a></p>
   <p><br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
