--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
@@ -39,7 +39,7 @@ class=label><b>Lock View and Show Members in Hierarchy</b></span> button is togg
     <a href="tasks-43.htm">Overriding a method</a> <br>
     &nbsp; 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1028" height=27 width=159> 
-  <p><a href="../reference/rinmeth.htm">Inherited methods</a> <br>
+  <p><a href="../reference/ref-dialog-override-method.htm">Override methods</a> <br>
     &nbsp; 
   <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1029" height=12 width=195> 
 </div>
