--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
@@ -48,7 +48,7 @@ method updates references only to that method.</div>
 <br><a href="tasks-43.htm">Overriding a method</a>
 <br><a href="tasks-98.htm">Renaming method parameters</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/rinmeth.htm">Inherited methods</a>
+<p><a href="../reference/ref-dialog-override-method.htm">Override methods</a>
 <br><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
